# go-judge

./: .gitignore  Cargo.toml  Makefile.rust  README.md  RUST_ARCHITECTURE.md  RUST_IMPLEMENTATION_SUMMARY.md  RUST_QUICKSTART.md  RUST_README.md  build.rs  libgojudge.h
.cargo/: config.toml
examples/: basic.rs  compiler_test.rs
src/: ffi.rs  lib.rs  types.rs
tests/: integration_test.rs
