[package]
name = "go-judge-ffi-rust"
version = "0.1.0"
edition = "2021"
authors = ["go-judge contributors"]
description = "Rust FFI bindings for go-judge sandbox"
license = "MIT"
repository = "https://github.com/harrowfung/go-judge"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"

[lib]
name = "go_judge_ffi_rust"
path = "src/lib.rs"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "compiler_test"
path = "examples/compiler_test.rs"
